Version 0.3.5
- %m% now supports 'type expressions', i.e. the signature is expressed as
'varName ~ typeName'. Using '=' for specifying the signature is not supported
anymore.

Version 0.3.4
- The class Show is not a reference class anymore but an ordinary S4 class. This
should not make a difference since it is virtual.

Version 0.3.3
- Linking the interfaces to the S4 class system to the roxygen2 documentation
facilities. It is now possible to document generics, methods and types in the
same way as you would using only the methods package.
- New functions parser_%m%, parser_%g% and parser_%type% to be used by roxygen2

Version 0.3.2
- New wrapper around setClass: %types% to be used as a subset of S4 classes. It
mimics the pattern of "setClass(...); setMethod("initialize", ...)" and captures
most of the needed features.

Version 0.3.1
- New wrappers (%g% and %m%) around setGeneric and setMethod from the methods
package. They provide an alternative approach to define (S4) generic functions
and methods putting an emphasis on readability.

Version 0.3.0
- CRAN release

Version 0.2.6
- Renaming Class -> defineRefClass

Version 0.2.5
- retList: renamed argument 'exports' to 'public'.
- Possible to define encapsulated unary operators.
- Vignette on classes with reList.
- Vignette on performance.

Version 0.2.4
- retList has now an object called .self referring to itself.

Version 0.2.3
- retList can now 'inherit' from another list. An extra argument superEnv can be
used to really extend a class definition in this framework.
- retList has new arguments to control inheritance. 

Version 0.2.2
- New classes Infix and Print which enable encapsulated definitions of infix
operators and print methods for S3 classes.

Version 0.2.1
- New functions retList and funNames to work with closures as objects

Version 0.2.0

- CRAN release

Version 0.1.6
- New class 'Binary' to add binary operators to aoos classes

Version 0.1.5
- Bugfix when calling new/constructor without arguments